--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,5 @@
 = RandomString
+{<img src="https://badge.fury.io/rb/random_string.png" alt="Gem Version" />}[http://badge.fury.io/rb/random_string]
 
 Ruby library which generates strings which match a regular expression
 
